--- a/pool/templates/rules.html
+++ b/pool/templates/rules.html
@@ -9,7 +9,7 @@
         <ul>
             <li>I cannot define dead, but I know it when I see it.</li>
             <li>People who just disappear offscreen and we don't know what happens to them: assumed alive. BUT: if someone is widely portrayed to be dead: (e.g. Bran and Rickon in the middle of Season Two, The Hound at the end of Season Four) he or she will be marked as dead.</li>
-            <li>People who are walking zombies, distinctly lacking in free-will and the natural power of biological life: dead. (This includes The Mountain and everyone in the army of the dead.</li>
+            <li>People who are walking zombies, distinctly lacking in free-will and the natural power of biological life: dead. (This includes The Mountain and everyone in the army of the dead.)</li>
             <li>People who were once dead, but are now seemingly alive (e.g. Jon Snow, Beric Dondarrion): alive.</li>
             <li>I am just going to make declarations in the case of ambiguity. Don't like that system? <a href="https://github.com/ojplg/gotdp">Fork the code.</a></li>
             <li>If there's an epilogue at the end of the last episode with the phrase "50 years later" and then an interlude of delightful Tarlannistark moppets frolicking in the fields with their pet dire dragons, that does not mean everyone's dead at the end of the series for the purposes of this pool.</li>
