--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static "pool/gotdp.css" %}">
     <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet"> 
+    <link rel="shortcut icon" href="{% static "pool/favicon.ico" %}" type="image/x-icon">
+    <link rel="icon" href="{% static "pool/favicon.ico" %}" type="image/x-icon">
 </head>
 
 <body background="{% static "pool/arya_walder.jpeg" %}">
