--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -23,6 +23,8 @@
         <a href="{% url 'scoreboard' %}">Scoreboard</a>
         &nbsp;&dagger;&nbsp;
         <a href="{% url 'rules_disclaimers' %}">Rules</a>
+        &nbsp;&dagger;&nbsp;
+        <a href="https://www.facebook.com/GameofThronesDeathpool/">Facebook</a>
     </div>
 
     <div class="navigation_login">
