--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -39,6 +39,8 @@
     <br/>
     <a href="{% url 'rules_disclaimers' %}">Rules</a>
     <br/>
+    <br/>
+    <a href="https://www.facebook.com/GameofThronesDeathpool/">Facebook</a>
 
 </div>
 
